[package]
name = "pr-commentator"
version = "0.2.0"
description = "A tool to comment on github PR"
authors = ["tibo <delor.thibault@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
reqwest = "0.9"
github-types = "0.1.1"
url = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2" 
lazy_static = "1"
regex = "1"
anyhow = "1"
strum = "0.16.0"
strum_macros = "0.16.0"